--- a/Site/Web2/css/estilo.css
+++ b/Site/Web2/css/estilo.css
@@ -69,7 +69,7 @@ p, label, input,small{
 
 #subNav #navbarResponsive .nav-item a{
     color: #005FF9; 
-    font-size: large;
+    /* font-size: large; */
 }
 #subNav #navbarResponsive .nav-item #menuD:after{
     content: '';
@@ -117,7 +117,7 @@ form,input,option,select,label{
 
 /* //Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
-    #nameproj {
+    #nameproj, #subNav #navbarResponsive {
         font-size: 1.5rem !important;
     }
     .nav-link svg, .dropdown-item svg, #sai svg, #sair svg{
@@ -135,7 +135,7 @@ form,input,option,select,label{
 
 /* //Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
-    #nameproj {
+    #nameproj, #subNav #navbarResponsive {
         font-size: 1.5rem !important;
     }
     .nav-link svg, .dropdown-item svg, #sai svg, #sair svg{
@@ -153,7 +153,7 @@ form,input,option,select,label{
 
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) { 
-    #nameproj {
+    #nameproj, #subNav #navbarResponsive {
         font-size: 1.5rem;
     }
     .nav-link svg, .dropdown-item svg, #sai svg, #sair svg{
@@ -172,7 +172,7 @@ form,input,option,select,label{
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) { 
     
-    #nameproj {
+    #nameproj, #subNav #navbarResponsive {
         font-size: 1.5rem !important;
     }
     .nav-link svg, .dropdown-item svg, #sai svg, #sair svg{
@@ -188,7 +188,7 @@ form,input,option,select,label{
  /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) and (max-width: 2559.98px){
     
-    #nameproj {
+    #nameproj, #subNav #navbarResponsive{
         font-size: 1.5rem !important;
     }
     .nav-link svg, .dropdown-item svg, #sai svg, #sair svg{
