--- a/Site/Web2/css/estiloIndexAluno.css
+++ b/Site/Web2/css/estiloIndexAluno.css
@@ -32,16 +32,21 @@ h1 {
     height: 5vh;
 } */
 
-
+.indiciplina {
+    min-height: 83vh;
+    max-height: 100%;
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+}
 
 /* //Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
    
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 5vh;
         padding-bottom: 25vh;
-    }
+    } */
 
     #sai{
         display: none;
@@ -80,12 +85,12 @@ h1 {
         padding-top: 1rem !important;
     }
 
-    .indiciplina {
+    /* .indiciplina {
         height: max-content !important;
         padding-top: 5vh;
         padding-bottom: 25vh;
-        /* background-color: yellowgreen !important; */
-    }
+        background-color: yellowgreen !important;
+    } */
     #sai{
         display: none;
     }
@@ -116,12 +121,12 @@ h1 {
     
 }
 @media (min-width: 768px) and (max-width: 991.98px) and (max-height:575.98px){
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 5vh;
         padding-bottom: 15vh;
-        /* background-color: blueviolet !important; */
-    }
+        background-color: blueviolet !important;
+    } */
     #rodape {
         bottom: unset;
         height: max-content;
@@ -129,13 +134,13 @@ h1 {
  }
 
 @media (min-width: 768px) and (max-width: 991.98px) and (min-height:576px) and (max-height: 767.98px){
-    
+/*     
     .indiciplina {
         height: 83vh;
         padding-top: 5vh;
-        /* padding-bottom: 10vh; */
-        /* background-color: #ffd900 !important; */
-    }
+        padding-bottom: 10vh;
+        background-color: #ffd900 !important;
+    } */
     #c_blue{
         min-height: max-content;
     }
@@ -146,12 +151,12 @@ h1 {
 }
 @media (min-width: 768px) and (max-width: 991.98px) and (min-height: 768px){
     
-    .indiciplina {
+    /* .indiciplina {
         height: 83vh;
         padding-top: 10vh;
         padding-bottom: 13vh;
-        /* background-color: brown !important; */
-    }
+        background-color: brown !important;
+    } */
 
     #rodape {
         bottom: unset;
@@ -161,12 +166,12 @@ h1 {
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 10vh;
         padding-bottom: 18vh;
-        /* background-color: yellowgreen !important; */
-    }
+        background-color: yellowgreen !important;
+    } */
     #rodape {
         bottom: unset;
         height: max-content;
@@ -193,12 +198,12 @@ h1 {
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) and (max-width: 2559.98px) {
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 8vh;
         padding-bottom: 16vh;
-        /* background-color: cadetblue !important; */
-    }
+        background-color: cadetblue !important;
+    } */
     #sair{
         display: none;
     }
@@ -217,11 +222,11 @@ h1 {
 }
 
 @media (min-width: 2560px) {
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 10vh;
         padding-bottom: 18vh;
-    }
+    } */
 
     #sair{
         display: none;
