--- a/Site/Web2/css/estiloRankingAdm.css
+++ b/Site/Web2/css/estiloRankingAdm.css
@@ -87,7 +87,12 @@ td,tr,th{
 label{
     font-size: 1.5rem !important;
 }
-
+.indiciplina {
+    min-height: 80vh;
+    max-height: 100%;
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+}
 
 /* //Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
@@ -101,11 +106,11 @@ label{
         margin-top: 0 !important;
     }
     
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 5vh;
         padding-bottom: 5vh;
-    }
+    } */
     #sai{
         display: none;
     }
@@ -148,12 +153,12 @@ label{
         margin-top: 0 !important;
     }
     
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 10vh;
         padding-bottom: 10vh;
         
-    }
+    } */
     #sai{
         display: none;
     }
@@ -202,6 +207,7 @@ label{
         padding-bottom: 5vh;
     } */
 
+
     #rodape {
         bottom: unset;
         height: max-content;
@@ -212,7 +218,7 @@ label{
     }
 
     #text_white {
-        width: 19rem !important;
+        width: 20rem !important;
         height: 10rem !important;
     }
     #trp{
@@ -221,41 +227,59 @@ label{
     .table-responsive{
         font-size: 1.5rem !important;
     }
+    h1 {
+        font-size: 3.5rem !important;
+    }
+    h2{
+        font-size: 1.7rem !important;
+    }
+    span{
+        font-size: 1.7rem !important;
+    }
+    label{
+        font-size: 1.5rem !important;
+    }
 }
 @media (min-width: 768px) and (max-width: 991.98px) and (max-height:575.98px){
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 5vh;
         padding-bottom: 15vh;
-        /* background-color: blueviolet !important; */
-    }
+        background-color: blueviolet !important;
+    } */
     #rodape {
         bottom: unset;
         height: max-content;
     }
+    #tipoLixo{
+        border-right: none !important;
+    }
  }
 
 @media (min-width: 768px) and (max-width: 991.98px) and (min-height:576px) and (max-height: 767.98px){
-    
+/*     
     .indiciplina {
-        height: 80vh;
+        height: max-content;
         padding-top: 5vh;
         padding-bottom: 10vh;
-        /* background-color: #ffd900 !important; */
-    }
+        background-color: #ffd900 !important;
+    } */
      #rodape {
         bottom: unset;
         height: max-content;
     }
+    #tipoLixo{
+        border-right: none !important;
+    }
 }
 @media (min-width: 768px) and (max-width: 991.98px) and (min-height: 768px){
     
-    .indiciplina {
-        height: 80vh;
+    /* .indiciplina {
+        height: max-content;
         padding-top: 10vh;
-        padding-bottom: 13vh;
-         /* background-color: brown !important;  */
-    }
+        padding-bottom: 18vh;
+         background-color: brown !important; 
+    } */
     #tipoLixo{
         border-right: none !important;
     }
@@ -267,11 +291,12 @@ label{
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
-    .indiciplina {
-        height: 83vh;
+    /* .indiciplina {
+        height: max-content;
         padding-top: 5vh;
-        padding-bottom: 10vh;
-    }
+        padding-bottom: 25vh;
+        background-color: yellow !important;
+    } */
 
     h1 {
         font-size: 3.5rem !important;
@@ -282,37 +307,42 @@ label{
     span{
         font-size: 1.7rem !important;
     }
-    #sair{
-        display: none;
-    }
-    #text_white {
-        width: 40vh !important;
-        height: 20vh !important;
-    }
-    #trp{
-        margin-left: 4vh;
-        margin-top: 1vh;
-    }
-    #rodape{
-        bottom: unset;
-        height: max-content;
-    }
     label{
         font-size: 1.5rem !important;
     }
     .table-responsive{
         font-size: 1.5rem !important;
     }
+    #sair{
+        display: none;
+    }
+    #text_white {
+        width: 20rem !important;
+        height: 10rem !important;
+    }
+    /* #trp{
+        margin-left: 4vh;
+        margin-top: 1vh;
+    } */
+    #rodape{
+        bottom: unset;
+        height: max-content;
+    }
+    
+    
 }
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) and (max-width: 2559.98px) {
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 8vh;
-        padding-bottom: 13vh;
+        padding-bottom: 18vh;
+        background-color: yellowgreen !important;
+    } */
+    #rodape{
+        bottom: unset;
     }
-    
     #sair{
         display: none;
     }
@@ -325,8 +355,8 @@ label{
         font-size: 2rem;
         padding-left: 2rem !important;
     }
-    #ran p{
-        font-size: 1.5rem !important;
+    #ran span{
+        font-size: 2rem !important;
     }
     h1{
         font-size: 3.5rem !important;
@@ -347,11 +377,11 @@ label{
 }
 
 @media (min-width: 2560px) {
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 13vh;
         padding-bottom: 18vh;
-    }
+    } */
 
     #sair{
         display: none;
