--- a/Site/Web2/css/estiloRankingAluno.css
+++ b/Site/Web2/css/estiloRankingAluno.css
@@ -87,7 +87,12 @@ td,tr,th{
 label{
     font-size: 1.5rem !important;
 }
-
+.indiciplina {
+    min-height: 80vh;
+    max-height: 100%;
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+}
 
 /* //Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
@@ -101,11 +106,11 @@ label{
         margin-top: 0 !important;
     }
     
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 5vh;
         padding-bottom: 5vh;
-    }
+    } */
     #sai{
         display: none;
     }
@@ -148,12 +153,12 @@ label{
         margin-top: 0 !important;
     }
     
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 10vh;
         padding-bottom: 10vh;
         
-    }
+    } */
     #sai{
         display: none;
     }
@@ -202,6 +207,7 @@ label{
         padding-bottom: 5vh;
     } */
 
+
     #rodape {
         bottom: unset;
         height: max-content;
@@ -235,39 +241,45 @@ label{
     }
 }
 @media (min-width: 768px) and (max-width: 991.98px) and (max-height:575.98px){
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 5vh;
         padding-bottom: 15vh;
-        /* background-color: blueviolet !important; */
-    }
+        background-color: blueviolet !important;
+    } */
     #rodape {
         bottom: unset;
         height: max-content;
     }
+    #tipoLixo{
+        border-right: none !important;
+    }
  }
 
 @media (min-width: 768px) and (max-width: 991.98px) and (min-height:576px) and (max-height: 767.98px){
-    
+/*     
     .indiciplina {
         height: max-content;
         padding-top: 5vh;
         padding-bottom: 10vh;
-        /* background-color: #ffd900 !important; */
-    }
+        background-color: #ffd900 !important;
+    } */
      #rodape {
         bottom: unset;
         height: max-content;
     }
+    #tipoLixo{
+        border-right: none !important;
+    }
 }
 @media (min-width: 768px) and (max-width: 991.98px) and (min-height: 768px){
     
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 10vh;
         padding-bottom: 18vh;
-         /* background-color: brown !important;  */
-    }
+         background-color: brown !important; 
+    } */
     #tipoLixo{
         border-right: none !important;
     }
@@ -279,12 +291,12 @@ label{
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 5vh;
         padding-bottom: 25vh;
-        /* background-color: yellow !important; */
-    }
+        background-color: yellow !important;
+    } */
 
     h1 {
         font-size: 3.5rem !important;
@@ -322,12 +334,12 @@ label{
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) and (max-width: 2559.98px) {
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 8vh;
         padding-bottom: 18vh;
-        /* background-color: yellowgreen !important; */
-    }
+        background-color: yellowgreen !important;
+    } */
     #rodape{
         bottom: unset;
     }
@@ -365,11 +377,11 @@ label{
 }
 
 @media (min-width: 2560px) {
-    .indiciplina {
+    /* .indiciplina {
         height: max-content;
         padding-top: 13vh;
         padding-bottom: 18vh;
-    }
+    } */
 
     #sair{
         display: none;
